--- a/ga/index.html
+++ b/ga/index.html
@@ -25,8 +25,8 @@
     <div id="leftmain"></div>
     <div id="centermain" class="flex-container">
         <div class="flex-item">
-            <div class="item_title">{{::data["agm"].title}}</div>
-            <div class="item_value">{{data["agm"].users}}</div>
+            <div class="item_title">{{::data[0].title}}</div>
+            <div class="item_value">{{data[0].users}}</div>
             <div class="item_logo">
 				<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 161 161" xml:space="preserve" style="opacity: 1;">
 					<g>
@@ -36,8 +36,8 @@
             </div>
 		</div>
         <div class="flex-item">
-            <div class="item_title">{{::data["saw"].title}}</div>
-            <div class="item_value">{{data["saw"].users}}</div>
+            <div class="item_title">{{::data[1].title}}</div>
+            <div class="item_value">{{data[1].users}}</div>
             <div class="item_logo">
 				<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 161 161" xml:space="preserve" style="opacity: 1;">
 					<g>
@@ -48,8 +48,8 @@
             </div>
         </div>
         <div class="flex-item">
-            <div class="item_title">{{::data["srl"].title}}</div>
-            <div class="item_value">{{data["srl"].users}}</div>
+            <div class="item_title">{{::data[2].title}}</div>
+            <div class="item_value">{{data[2].users}}</div>
             <div class="item_logo">
 				<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 161 161" xml:space="preserve" style="opacity: 1;">
 					<g>
@@ -59,19 +59,19 @@
 			</div>
         </div>
         <div class="flex-item">
-            <div class="item_title">{{::data["appm"].title}}</div>
-            <div class="item_value">{{data["appm"].users}}</div>
+            <div class="item_title">{{::data[3].title}}</div>
+            <div class="item_value">{{data[3].users}}</div>
             <div class="item_logo">
 				<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 161 161" xml:space="preserve" style="opacity: 1;">
 					<g>
-						<path d="M141.015,71.998c-3.824,0-7.111,2.267-8.615,5.524h-19.175c-1.621,0-3.08,0.985-3.684,2.49l-9.561,23.811  l-9.2-62.327c-0.263-1.779-1.689-3.16-3.477-3.364c-1.789-0.204-3.488,0.819-4.146,2.493L69.117,76.388H10.491v7.94h61.333  c1.633,0,3.099-0.999,3.695-2.519L85.102,57.4l9.167,62.103c0.262,1.773,1.681,3.152,3.461,3.363  c0.157,0.018,0.313,0.027,0.468,0.027c1.604,0,3.072-0.973,3.683-2.49l14.028-34.941h16.491c1.504,3.258,4.791,5.523,8.615,5.523  c5.243,0,9.494-4.25,9.494-9.493S146.258,71.998,141.015,71.998z"></path>
+						<path ng-attr-d={{::data[3].logosvg}}></path>
 					</g>
 				</svg>
 			</div>
         </div>
         <div class="flex-item">
-            <div class="item_title">{{::data["ma"].title}}</div>
-            <div class="item_value">{{data["ma"].users}}</div>
+            <div class="item_title">{{::data[4].title}}</div>
+            <div class="item_value">{{data[4].users}}</div>
             <div class="item_logo">
 					<img src="img/hp.black.png" alt="HP" style="width:48px" border="0">
             </div>
