--- a/ga/index.html
+++ b/ga/index.html
@@ -6,12 +6,14 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.9.4/angular-material.min.css">
     <link rel="stylesheet" href="css/index.css" type="text/css" media="screen">
-		<script src="https://apis.google.com/js/platform.js"></script>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-animate.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-aria.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angular_material/0.8.3/angular-material.min.js"></script>
+    <script src="js/index.js"></script>
+	<!-- Gabay -->
 	<script src="js/auth.js"></script>
-	
 	<script src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>
-<!--	
 	<script>
 		(function(w,d,s,g,js,fs){
 		  g=w.gapi||(w.gapi={});g.analytics={q:[],ready:function(f){this.q.push(f);}};
@@ -20,15 +22,8 @@
 		  fs.parentNode.insertBefore(js,fs);js.onload=function(){g.load('analytics');};
 		}(window,document,'script'));
 	</script>
-	-->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-animate.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-aria.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angular_material/0.8.3/angular-material.min.js"></script>
-    <script src="js/index.js"></script>
-
-
-
+	<!--  -->
+	
 </head>
 <body ng-controller="dashCtrl">
 <div id="topbar">
@@ -36,9 +31,9 @@
 		<img src="img/hp_logo_white.png" alt="HP" height="50px" border="0">
 	</div>
 	<div id="hptitle">Modernized Analytics</div>
-	<div id="" style="float:right; margin-right:20px">
-		<!--Adding authorization button-->
-		<button id="authorize-button">Authorize</button>
+	<div id="authorize" style="float:right; margin-right:20px">
+		<!--AG: Adding authorization button for cases where auto authentication failed-->
+		<button id="authorize-button" style="visibility: hidden">Login</button>
 	</div>
 </div>
 <div id="main">
@@ -74,7 +69,10 @@
         </div>
         <div class="flex-item">
             <div class="item_title">{{::data[4].title}}</div>
+	<!--
             <div class="item_value">{{data[4].users}}</div>
+-->
+            <div class="item_value" id="ma-query"></div>
             <div class="item_logo">
 				<img ng-src="{{::data[4].logo}}" style="width:48px" border="0">
             </div>
