--- a/ga/index.html
+++ b/ga/index.html
@@ -43,35 +43,35 @@
             <div class="item_title">{{::data[0].title}}</div>
             <div class="item_value">{{data[0].users}}</div>
             <div class="item_logo">
-				<img ng-src="{{::data[0].logo}}" style="width:48px" border="0">
+				<img ng-src="{{::data[0].logo}}" border="0">
             </div>
 		</div>
         <div class="flex-item">
             <div class="item_title">{{::data[1].title}}</div>
             <div class="item_value">{{data[1].users}}</div>
             <div class="item_logo">
-				<img ng-src="{{::data[1].logo}}" style="width:48px" border="0">
+				<img ng-src="{{::data[1].logo}}" border="0">
             </div>
         </div>
         <div class="flex-item">
             <div class="item_title">{{::data[2].title}}</div>
             <div class="item_value">{{data[2].users}}</div>
             <div class="item_logo">
-				<img ng-src="{{::data[2].logo}}" style="width:48px" border="0">
+				<img ng-src="{{::data[2].logo}}" border="0">
 			</div>
         </div>
         <div class="flex-item">
             <div class="item_title">{{::data[3].title}}</div>
             <div class="item_value">{{data[3].users}}</div>
             <div class="item_logo">
-				<img ng-src="{{::data[3].logo}}" style="width:48px" border="0">
+				<img ng-src="{{::data[3].logo}}" border="0">
 			</div>
         </div>
         <div class="flex-item">
             <div class="item_title">{{::data[4].title}}</div>
             <div class="item_value">{{data[4].users}}</div>
             <div class="item_logo">
-				<img ng-src="{{::data[4].logo}}" style="width:48px" border="0">
+				<img ng-src="{{::data[4].logo}}" border="0">
             </div>
         </div>
     </div>
