--- a/ga/index.html
+++ b/ga/index.html
@@ -32,6 +32,8 @@
 	</div>
 	<div id="hptitle">Modernized Analytics</div>
 	<div id="authorize" style="float:right; margin-right:20px">
+		<!-- Countdown bar to show whens the next refresh of data -->
+		<md-progress-circular md-mode="determinate" value="{{determinateValue}}"></md-progress-circular>
 		<!--AG: Adding authorization button for cases where auto authentication failed-->
 		<button id="authorize-button" style="visibility: hidden">Login</button>
 	</div>
