--- a/ga/index.html
+++ b/ga/index.html
@@ -32,10 +32,14 @@
 	</div>
 	<div id="hptitle">Modernized Analytics</div>
 	<div id="authorize" style="float:right; margin-right:20px">
-		<!-- Countdown bar to show whens the next refresh of data 0-->
-		<md-progress-circular md-mode="determinate" value="{{determinateValue}}"></md-progress-circular>
+		
 		<!--AG: Adding authorization button for cases where auto authentication failed-->
-		<button id="authorize-button" style="visibility: hidden">Login</button>
+        <md-button id="authorize-button" class="md-fab md-primary" aria-label="Login">
+          <img id="login_img" src="img/user-512.png"></img>
+        </md-button>
+ 
+		<!-- Countdown bar to show whens the next refresh of data 0-->
+		<md-progress-circular id="progress-circular" md-mode="determinate" value="{{determinateValue}}" style="visibility:hidden"></md-progress-circular>
 	</div>
 </div>
 <div id="main">
