--- a/gamock/index.html
+++ b/gamock/index.html
@@ -34,12 +34,13 @@
 	<div id="authorize" style="float:right; margin-right:20px">
 		
 		<!--AG: Adding authorization button for cases where auto authentication failed-->
+		<!--
         <md-button id="authorize-button" class="md-fab md-primary" aria-label="Login">
           <img id="login_img" src="img/user-512.png"></img>
         </md-button>
- 
+ -->
 		<!-- Countdown bar to show whens the next refresh of data 0-->
-		<md-progress-circular id="progress-circular" md-mode="determinate" value="{{determinateValue}}" style="visibility:hidden"></md-progress-circular>
+		<md-progress-circular id="progress-circular" md-mode="determinate" value="{{determinateValue}}"></md-progress-circular>
 	</div>
 </div>
 <div id="main">
