--- a/ga/index.html
+++ b/ga/index.html
@@ -2,7 +2,8 @@
 <html ng-app="dashApp">
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+	<link rel="icon" type="image/x-icon" href="img/favicon.ico">
+    <title>Modernized Analytics - Past 5m Active Users</title>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.9.4/angular-material.min.css">
     <link rel="stylesheet" href="css/index.css" type="text/css" media="screen">
