--- a/ga/index.html
+++ b/ga/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
 	<link rel="icon" type="image/x-icon" href="img/favicon.ico">
-    <title>Modernized Analytics - Past 5m Active Users</title>
+    <title>Modernized Analytics</title>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.9.4/angular-material.min.css">
     <link rel="stylesheet" href="css/index.css" type="text/css" media="screen">
@@ -34,7 +34,7 @@
 	<div id="hplogo">
 		<img src="img/hp_logo_white.png" alt="HP" height="50px" border="0">
 	</div>
-	<div id="hptitle">Modernized Analytics</div>
+	<div id="hptitle">Modernized Analytics - Past 5m Active Users</div>
 	<div id="authorize" style="float:right; margin-right:20px">
 		
 		<!--AG: Adding authorization button for cases where auto authentication failed-->
