--- a/ga/index.html
+++ b/ga/index.html
@@ -83,6 +83,13 @@
 				<img ng-src="{{::data[4].logo}}" border="0">
             </div>
         </div>
+		<div class="flex-item">
+            <div class="item_title">{{::data[5].title}}</div>
+            <div class="item_value">{{data[5].users}}</div>
+            <div class="item_logo">
+				<img ng-src="{{::data[5].logo}}" border="0">
+            </div>
+        </div>
     </div>
     <div id="rightmain"></div>
 </div>
